--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,11 +8,14 @@
 
     <string name="welcome">"Welcome !"</string>
     <string name="welcome_text">Welcome to the</string>
+    <string name="action_cart">Cart</string>
+    <string name="action_settings">Settings</string>
 
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
 
     <string name="biz_logo">Logo</string>
+    <string name="title_activity_available_orders">Available Orders</string>
 
 </resources>
